[package]
name = "polkadot-voter-bags"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }

generate-bags = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-io = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }

cherry-runtime = { path = "../../runtime/cherry" }
