[package]
name = "pallet-xcm"
authors.workspace = true
edition.workspace = true
version.workspace = true


[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", optional = true, features = ["derive"] }
log = { version = "0.4.17", default-features = false }

frame-benchmarking = { git = "https://github.com/CherryNetwork/substrate", default-features = false, optional = true , branch = "cherry-testnet" }
frame-support = { git = "https://github.com/CherryNetwork/substrate", default-features = false, branch = "cherry-testnet" }
frame-system = { git = "https://github.com/CherryNetwork/substrate", default-features = false, branch = "cherry-testnet" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", default-features = false, branch = "cherry-testnet" }
sp-io = { git = "https://github.com/CherryNetwork/substrate", default-features = false, branch = "cherry-testnet" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", default-features = false, branch = "cherry-testnet" }
sp-std = { git = "https://github.com/CherryNetwork/substrate", default-features = false, branch = "cherry-testnet" }

xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
polkadot-runtime-parachains = { path = "../../runtime/parachains" }
polkadot-parachain = { path = "../../parachain" }
xcm-builder = { path = "../xcm-builder" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
