[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
name = "xcm-executor"
description = "An abstract and configurable XCM message executor."
version = "0.9.27"

[dependencies]
impl-trait-for-tuples = "0.2.2"
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
sp-std = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "test-temp" }
sp-io = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "test-temp" }
sp-arithmetic = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "test-temp" }
sp-core = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "test-temp" }
sp-runtime = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "test-temp" }
frame-support = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "test-temp" }
log = { version = "0.4.17", default-features = false }
frame-benchmarking = { git = "https://github.com/zycon91/substrate", default-features = false, optional = true , branch = "test-temp" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
std = [
	"parity-scale-codec/std",
	"xcm/std",
	"sp-std/std",
	"sp-io/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"log/std",
]
