[package]
name = "xcm-simulator"
version = "0.9.27"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test kit to simulate cross-chain message passing and XCM execution"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
paste = "1.0.7"

frame-support = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-io = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-std = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }

xcm = { path = "../" }
xcm-executor = { path = "../xcm-executor" }
polkadot-core-primitives = { path = "../../core-primitives"}
polkadot-parachain = { path = "../../parachain" }
polkadot-runtime-parachains = { path = "../../runtime/parachains" }
