[package]
name = "polkadot-statement-distribution"
version = "0.9.27"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Statement Distribution Subsystem"
edition = "2021"

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
polkadot-primitives = { path = "../../../primitives" }
sp-staking = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "test-temp" }
sp-keystore = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
polkadot-node-subsystem = {path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
polkadot-node-network-protocol = { path = "../../network/protocol" }
arrayvec = "0.5.2"
indexmap = "1.9.0"
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
fatality = "0.0.6"

[dev-dependencies]
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
assert_matches = "1.4.0"
sp-authority-discovery = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sp-keyring = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sp-core = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sp-application-crypto = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sp-keystore = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sp-tracing = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sc-keystore = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sc-network = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
futures-timer = "3.0.2"
polkadot-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
