[package]
name = "polkadot-statement-distribution"
description = "Statement Distribution Subsystem"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
polkadot-primitives = { path = "../../../primitives" }
sp-staking = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-keystore = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
polkadot-node-subsystem = {path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
polkadot-node-network-protocol = { path = "../../network/protocol" }
arrayvec = "0.5.2"
indexmap = "1.9.1"
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
fatality = "0.0.6"

[dev-dependencies]
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
assert_matches = "1.4.0"
sp-authority-discovery = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-keyring = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-application-crypto = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-keystore = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-tracing = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-keystore = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-network = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
futures-timer = "3.0.2"
polkadot-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
