[package]
name = "polkadot-test-client"
version = "0.9.27"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }
sc-service = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }
sc-block-builder = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }
sc-consensus = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }
sp-blockchain = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }
sp-runtime = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }
sp-inherents = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }
sp-core = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }
sp-api = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }
sp-timestamp = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }
sp-consensus = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }
sp-consensus-babe = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }
sp-state-machine = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }
futures = "0.3.21"
