[package]
name = "polkadot-test-client"
version = "0.9.29"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-service = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-block-builder = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-consensus = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-blockchain = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-inherents = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-timestamp = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-consensus = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-consensus-babe = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-state-machine = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
futures = "0.3.21"
