[package]
name = "polkadot-test-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-service = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-block-builder = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-consensus = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-blockchain = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-inherents = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-timestamp = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-consensus = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-consensus-babe = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-state-machine = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
futures = "0.3.21"
