[package]
name = "polkadot-test-service"
version = "0.9.27"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
futures = "0.3.21"
hex = "0.4.3"
gum = { package = "tracing-gum", path = "../../gum" }
rand = "0.8.5"
tempfile = "3.2.0"
tokio = "1.18.2"

# Polkadot dependencies
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-parachain = { path = "../../../parachain" }
polkadot-rpc = { path = "../../../rpc" }
polkadot-runtime-common = { path = "../../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
test-runtime-constants = { path = "../../../runtime/test-runtime/constants" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }

# Substrate dependencies
sp-authority-discovery = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sc-authority-discovery = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
babe = { package = "sc-consensus-babe", git = "https://github.com/zycon91/substrate", branch = "test-temp" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/zycon91/substrate", branch = "test-temp" }
consensus_common = { package = "sp-consensus", git = "https://github.com/zycon91/substrate", branch = "test-temp" }
frame-benchmarking = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
frame-system = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/zycon91/substrate", branch = "test-temp" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/zycon91/substrate", branch = "test-temp" }
inherents = { package = "sp-inherents", git = "https://github.com/zycon91/substrate", branch = "test-temp" }
pallet-staking = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
pallet-balances = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
pallet-transaction-payment = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sc-chain-spec = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sc-cli = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sc-client-api = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sc-consensus = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sc-executor = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sc-network = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sc-tracing = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sc-transaction-pool = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sc-service = { git = "https://github.com/zycon91/substrate", default-features = false, features = [ "wasmtime" ] , branch = "test-temp" }
sp-arithmetic = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sp-blockchain = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sp-core = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sp-keyring = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sp-runtime = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
sp-state-machine = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
substrate-test-client = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "test-temp" }
serde_json = "1.0.81"
substrate-test-utils = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }
tokio = { version = "1.18.2", features = ["macros"] }

[features]
runtime-metrics=["polkadot-test-runtime/runtime-metrics"]
