[package]
name = "polkadot-test-service"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
hex = "0.4.3"
gum = { package = "tracing-gum", path = "../../gum" }
rand = "0.8.5"
tempfile = "3.2.0"
tokio = "1.24.1"

# Polkadot dependencies
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-parachain = { path = "../../../parachain" }
polkadot-rpc = { path = "../../../rpc" }
polkadot-runtime-common = { path = "../../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
test-runtime-constants = { path = "../../../runtime/test-runtime/constants" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }

# Substrate dependencies
sp-authority-discovery = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-authority-discovery = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
babe = { package = "sc-consensus-babe", git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
consensus_common = { package = "sp-consensus", git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
frame-benchmarking = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
frame-system = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
inherents = { package = "sp-inherents", git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
pallet-staking = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
pallet-balances = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
pallet-transaction-payment = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-chain-spec = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-cli = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-client-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-consensus = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-executor = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-network = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-network-common = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-tracing = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-transaction-pool = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-service = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-arithmetic = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-blockchain = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-keyring = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-state-machine = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
substrate-test-client = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
serde_json = "1.0.81"
substrate-test-utils = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
tokio = { version = "1.24.1", features = ["macros"] }

[features]
runtime-metrics=["polkadot-test-runtime/runtime-metrics"]
runtime-benchmarks=["polkadot-test-runtime/runtime-benchmarks"]
