[package]
name = "test-parachain-halt"
version = "0.9.27"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test parachain which executes forever"
edition = "2021"
build = "build.rs"

[dependencies]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/zycon91/substrate", branch = "test-temp" }

[features]
default = [ "std" ]
std = []
