[package]
name = "test-parachain-halt"
version = "0.9.28"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test parachain which executes forever"
edition = "2021"
build = "build.rs"

[dependencies]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-v0.9.28" }

[features]
default = [ "std" ]
std = []
