[package]
name = "cherry-runtime-constants"
version = "0.2.0-alpha"
edition = "2021"

[dependencies]
smallvec = "1.8.0"

frame-support = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "upgrade-to-v0.9.34" }
primitives = { package = "polkadot-primitives", path = "../../../primitives", default-features = false }
runtime-common = { package = "polkadot-runtime-common", path = "../../common", default-features = false }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "upgrade-to-v0.9.34" }
sp-staking = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "upgrade-to-v0.9.34" }

[features]
default = ["std"]
std = [
	"sp-runtime/std",
	"sp-staking/std",
]
