[package]
name = "kusama-runtime-constants"
version = "0.9.27"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
smallvec = "1.8.0"

frame-support = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "test-temp" }
primitives = { package = "polkadot-primitives", path = "../../../primitives", default-features = false }
runtime-common = { package = "polkadot-runtime-common", path = "../../common", default-features = false }
sp-runtime = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "test-temp" }

[features]
default = ["std"]
std = [
	"sp-runtime/std"
]
