[package]
name = "rococo-runtime-constants"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
smallvec = "1.8.0"

frame-support = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
primitives = { package = "polkadot-primitives", path = "../../../primitives", default-features = false }
runtime-common = { package = "polkadot-runtime-common", path = "../../common", default-features = false }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-weights = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"primitives/std",
	"runtime-common/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-weights/std",
]
