[package]
name = "test-runtime-constants"
version = "0.9.33"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
smallvec = "1.8.0"

frame-support = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
primitives = { package = "polkadot-primitives", path = "../../../primitives", default-features = false }
runtime-common = { package = "polkadot-runtime-common", path = "../../common", default-features = false }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-weights = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std"
]
