[package]
name = "remote-ext-tests-bags-list"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
cherry-runtime = { path = "../../../runtime/cherry" }
cherry-runtime-constants = { path = "../../../runtime/cherry/constants" }

pallet-bags-list-remote-tests = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-tracing = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
frame-system = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }

clap = { version = "4.0.9", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.24.1", features = ["macros"] }
