[package]
name = "xcm-simulator-example"
version = "0.9.27"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Examples of xcm-simulator usage."
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = { version = "2.1.2", features = ["derive"] }

frame-system = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
frame-support = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
pallet-balances = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sp-std = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sp-io = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }

xcm = { path = "../../" }
xcm-simulator = { path = "../" }
xcm-executor = { path = "../../xcm-executor" }
xcm-builder = { path = "../../xcm-builder" }
pallet-xcm = { path = "../../pallet-xcm" }
polkadot-core-primitives = { path = "../../../core-primitives" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }
polkadot-parachain = { path = "../../../parachain" }
