[package]
name = "xcm-simulator-example"
description = "Examples of xcm-simulator usage."
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.3.0" }
scale-info = { version = "2.1.2", features = ["derive"] }
log = { version = "0.4.14", default-features = false }

frame-system = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
frame-support = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
pallet-balances = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
pallet-uniques = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-std = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-io = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-tracing = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }

xcm = { path = "../../" }
xcm-simulator = { path = "../" }
xcm-executor = { path = "../../xcm-executor" }
xcm-builder = { path = "../../xcm-builder" }
pallet-xcm = { path = "../../pallet-xcm" }
polkadot-core-primitives = { path = "../../../core-primitives" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }
polkadot-parachain = { path = "../../../parachain" }

[features]
default = []
runtime-benchmarks = [
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"polkadot-runtime-parachains/runtime-benchmarks",
	"polkadot-parachain/runtime-benchmarks",
]
